--- a/index.html
+++ b/index.html
@@ -322,8 +322,8 @@
                     </ul>
                     <ul class="d-flex align-items-center">
                         <li class="dropdown-toggler">
-                            <a href="javascript:void(0)"><i class="fa-solid fa-magnifying-glass"></i><i
-                                    class="fa-solid fa-globe"></i><sup>EN</sup></a>
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                            <a href="javascript:void(0)"><i class="fa-solid fa-globe"></i> <sup>EN</sup></a>
                             <ul class="dropdown-menu-language">
                                 <li><a href="javascript:void(0)">French</a></li>
                                 <li><a href="javascript:void(0)">Spanish</a></li>
@@ -374,7 +374,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-6 col-lg-4">
-                        <i class="fa-solid fa-heart"></i> <strong>Fully Responsive</strong>
+                        <i class="fa-solid fa-heart"></i><strong>Fully Responsive</strong>
                         <p>We're POLO, a creative agency located in the heart of New York city. A true story, that never
                             been told!. Fusce id mi diam, non ornare orci. Pellentesque ipsum erat, facilisis ut
                             venenatis
@@ -395,7 +395,7 @@
                             eu</p>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <i class="fa-solid fa-trophy"></i> <strong>Powerful</strong>
+                        <i class="fa-solid fa-trophy"></i><strong>Powerful</strong>
                         <p>We're POLO, a creative agency located in the heart of New York city. A true story, that never
                             been told!. Fusce id mi diam, non ornare orci. Pellentesque ipsum erat, facilisis ut
                             venenatis
@@ -409,7 +409,7 @@
                             eu</p>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <i class="fa-solid fa-tv"></i> <strong>Flexible Layouts</strong>
+                        <i class="fa-solid fa-laptop"></i><strong>Flexible Layouts</strong>
                         <p>We're POLO, a creative agency located in the heart of New York city. A true story, that never
                             been told!. Fusce id mi diam, non ornare orci. Pellentesque ipsum erat, facilisis ut
                             venenatis
@@ -606,7 +606,8 @@
                         <div class="card-1">
                             <div class="d-flex justify-content-between">
                                 <ul class="d-flex">
-                                    <li><a href="javascript:void(0)"><i class="fa-solid fa-cart-shopping"></i> Labore et
+                                    <li><a href="javascript:void(0)"> <i class="fa-solid fa-cart-shopping"></i> class=
+                                            Labore et
                                             dolore</a></li>
                                 </ul>
                                 <ul class="d-flex">
@@ -623,26 +624,26 @@
                             <div class="d-flex">
                                 <img src="./images/21.jpg" alt="">
                                 <span>Suspendisse consecutor fringilla</span>
-                                <span><i class="fa-regular fa-clock"></i> 6m ago <i class="fa-solid fa-tag"></i>
-                                    Technology</span>
+                                <span><i class="fa-solid fa-clock"></i> 6m ago
+                                    Technology</span><i class="fa-solid fa-tag"></i>
                             </div>
                             <div class="d-flex">
                                 <img src="./images/22.jpg" alt="">
                                 <span>Beautiful Nature and rare Feathers!</span>
-                                <span><i class="fa-regular fa-clock"></i> 6m ago <i class="fa-solid fa-tag"></i>
-                                    Technology</span>
+                                <span><i class="fa-solid fa-clock"></i> 6m ago
+                                    Technology</span><i class="fa-solid fa-tag"></i>
                             </div>
                             <div class="d-flex">
                                 <img src="./images/23.jpg" alt="">
                                 <span>The most happiest time of the day</span>
-                                <span><i class="fa-regular fa-clock"></i> 6m ago <i class="fa-solid fa-tag"></i>
-                                    Technology</span>
+                                <span><i class="fa-solid fa-clock"></i> 6m ago
+                                    Technology</span><i class="fa-solid fa-tag"></i>
                             </div>
                             <div class="d-flex">
                                 <img src="./images/24.jpg" alt="">
                                 <span>Fringilla Lorem ipsum dolor sit amet.</span>
-                                <span><i class="fa-regular fa-clock"></i> 6m ago <i class="fa-solid fa-tag"></i>
-                                    Technology</span>
+                                <span><i class="fa-solid fa-clock"></i> 6m ago
+                                    Technology</span><i class="fa-solid fa-tag"></i>
                             </div>
                         </div>
                     </div>
@@ -691,7 +692,7 @@
                                     </li>
                                     <li class="fa-facebook-f">
                                         <a href="javascript:void(0)">
-                                            <i class="fa-brands fa-facebook-f"></i>
+                                            <i class="fa-brands fa-facebook"></i>
                                         </a>
                                     </li>
                                     <li class="fa-twitter">
@@ -701,7 +702,7 @@
                                     </li>
                                     <li class="fa-vimeo">
                                         <a href="javascript:void(0)">
-                                            <i class="fa-brands fa-vimeo"></i>
+                                            <i class="fa-solid fa-v"></i>
                                         </a>
                                     </li>
                                     <li class="fa-youtube">
@@ -721,28 +722,27 @@
                                     </li>
                                     <li class="fa-google-plus-g">
                                         <a href="javascript:void(0)">
-                                            <i class="fa-brands fa-google-plus-g"></i>
+                                            <i class="fa-brands fa-google-plus"></i>
                                         </a>
                                     </li>
                                     <li class="fa-dribbble">
                                         <a href="javascript:void(0)">
-                                            <i class="fa-brands fa-dribbble"></i>
+                                            <i class="fa-solid fa-baseball"></i>
                                         </a>
                                     </li>
                                     <li class="fa-skype">
                                         <a href="javascript:void(0)">
-                                            <i class="fa-brands fa-skype"></i>
+                                            <i class="fa-solid fa-s"></i>
                                         </a>
                                     </li>
                                     <li class="fa-linkedin">
                                         <a href="javascript:void(0)">
-                                            <i class="fa-brands fa-linkedin"></i>
+                                            <i class="fa-brands fa-linkedin-in"></i>
                                         </a>
                                     </li>
                                     <li class="fa-square-behance">
                                         <a href="javascript:void(0)">
-                                            <i class="fa-brands fa-square-behance"></i>
-                                        </a>
+                                            <i class="fa-brands fa-behance"></i> </a>
                                     </li>
                                     <li class="fa-flickr">
                                         <a href="javascript:void(0)">
