--- a/index.html
+++ b/index.html
@@ -624,26 +624,33 @@
                             <div class="d-flex">
                                 <img src="./images/21.jpg" alt="">
                                 <span>Suspendisse consecutor fringilla</span>
-                                <span><i class="fa-solid fa-clock"></i> 6m ago
-                                    Technology</span><i class="fa-solid fa-tag"></i>
+                                <p><i class="fa-solid fa-clock"></i> 6m ago
+                                    Technology </p>
+                                    <div class="life">
+                                    <i class="fa-solid fa-tag"></i>
+                                    Lifestyle
+                                    </div>
                             </div>
                             <div class="d-flex">
                                 <img src="./images/22.jpg" alt="">
                                 <span>Beautiful Nature and rare Feathers!</span>
-                                <span><i class="fa-solid fa-clock"></i> 6m ago
-                                    Technology</span><i class="fa-solid fa-tag"></i>
+                                <p><i class="fa-solid fa-clock"></i> 6m ago
+                                    Technology </p><i class="fa-solid fa-tag"></i>
+                                    Lifestyle
                             </div>
                             <div class="d-flex">
                                 <img src="./images/23.jpg" alt="">
                                 <span>The most happiest time of the day</span>
-                                <span><i class="fa-solid fa-clock"></i> 6m ago
-                                    Technology</span><i class="fa-solid fa-tag"></i>
+                                <p><i class="fa-solid fa-clock"></i> 6m ago
+                                    Technology </p><i class="fa-solid fa-tag"></i>
+                                    Lifestyle
                             </div>
                             <div class="d-flex">
                                 <img src="./images/24.jpg" alt="">
                                 <span>Fringilla Lorem ipsum dolor sit amet.</span>
-                                <span><i class="fa-solid fa-clock"></i> 6m ago
-                                    Technology</span><i class="fa-solid fa-tag"></i>
+                                <p><i class="fa-solid fa-clock"></i> 6m ago
+                                    Technology</p><i class="fa-solid fa-tag"></i>
+                                    Lifestyle
                             </div>
                         </div>
                     </div>
