--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <!-- header section start -->
+     <!-- header section start -->
     <header>
         <div class="container">
             <div class="topbar d-flex justify-content-between">
@@ -534,6 +534,16 @@
                                 <a href="javascript:vod(0)"><i class="fa-solid fa-link"></i></a>
                             </div>
                         </div>
+                        <div class="images d-flex col-md-6 col-lg-4">
+                            <div class="container">
+                                <div class="img-section d-flex">
+                                    <img src="./images/31.png" alt="img-1">
+                                    <img src="./images/32.png" alt="img-2">
+                                    <img src="./images/33.png" alt="img-3">
+                                    <img src="./images/34.png" alt="img-4">
+                                </div>
+                            </div>
+                        </div>
                     </div>
         </section>
         <!-- portfolio section end -->
@@ -626,35 +636,44 @@
                                 <span>Suspendisse consecutor fringilla</span>
                                 <p><i class="fa-solid fa-clock"></i> 6m ago
                                     Technology </p>
-                                    <div class="life">
+                                <div class="life">
                                     <i class="fa-solid fa-tag"></i>
                                     Lifestyle
-                                    </div>
+                                </div>
                             </div>
-                            <div class="d-flex">
-                                <img src="./images/22.jpg" alt="">
-                                <span>Beautiful Nature and rare Feathers!</span>
-                                <p><i class="fa-solid fa-clock"></i> 6m ago
-                                    Technology </p><i class="fa-solid fa-tag"></i>
-                                    Lifestyle
+                        </div>
+                        <div class="d-flex">
+                            <img src="./images/22.jpg" alt="">
+                            <span>Beautiful Nature and rare Feathers!</span>
+                            <p><i class="fa-solid fa-clock"></i> 6m ago
+                            <div class="life">
+                                Technology </p><i class="fa-solid fa-tag"></i>
+                                Lifestyle
                             </div>
-                            <div class="d-flex">
-                                <img src="./images/23.jpg" alt="">
-                                <span>The most happiest time of the day</span>
-                                <p><i class="fa-solid fa-clock"></i> 6m ago
-                                    Technology </p><i class="fa-solid fa-tag"></i>
-                                    Lifestyle
+                        </div>
+                        <div class="d-flex">
+                            <img src="./images/23.jpg" alt="">
+                            <span>The most happiest time of the day</span>
+                            <p><i class="fa-solid fa-clock"></i> 6m ago
+                            <div class="life">
+
+                                Technology </p><i class="fa-solid fa-tag"></i>
+                                Lifestyle
                             </div>
-                            <div class="d-flex">
-                                <img src="./images/24.jpg" alt="">
-                                <span>Fringilla Lorem ipsum dolor sit amet.</span>
-                                <p><i class="fa-solid fa-clock"></i> 6m ago
-                                    Technology</p><i class="fa-solid fa-tag"></i>
-                                    Lifestyle
+                        </div>
+                        <div class="d-flex">
+                            <img src="./images/24.jpg" alt="">
+                            <span>Fringilla Lorem ipsum dolor sit amet.</span>
+                            <p><i class="fa-solid fa-clock"></i> 6m ago
+                            <div class="life">
+                                Technology</p><i class="fa-solid fa-tag"></i>
+                                Lifestyle
                             </div>
+
                         </div>
                     </div>
                 </div>
+            </div>
             </div>
         </section>
         <!-- About section end -->
